--- a/Totoro/footer.html
+++ b/Totoro/footer.html
@@ -10,9 +10,9 @@
                 <div class="col-sm-3">
                     <h4>Quick Links</h4>
                     <ul class="list-unstyled">
-                        <li><a href="rooms.php">Rooms</a></li>        
+                        <li><a href="rooms.html">Rooms</a></li>        
                         <li><a href="reservation.php">Reservation</a></li>
-                        <li><a href="contact.php">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                  <div class="col-sm-4 subscribe">
