--- a/Totoro/header.html
+++ b/Totoro/header.html
@@ -50,15 +50,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.php"><img src="img/logo.png"  alt="Totoro Hotel" class="size"></a>
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png"  alt="Totoro Hotel" class="size"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
       
       <ul class="nav navbar-nav">        
-        <li><a href="index.php">Home </a></li>
-        <li><a href="rooms.php">Rooms</a></li>        
+        <li><a href="index.html">Home </a></li>
+        <li><a href="rooms.html">Rooms</a></li>        
         <li><a href="reservation.php">Reservation</a></li>
         <li><a href="contact.php">Contact</a></li>
       </ul>
