--- a/Totoro/index.html
+++ b/Totoro/index.html
@@ -1,5 +1,12 @@
-<?php include 'header.php';?>
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script>
+    $(function(){
+        $("#header").load("header.html"); 
+        $("#footer").load("footer.html"); 
+    });
+</script>
 
+<div id="header"></div>
 
 
 
@@ -167,4 +174,5 @@
 <!-- services -->
 
 
-<?php include 'footer.php';?>
+
+<div id="footer"></div>
