--- a/Totoro/reservation.html
+++ b/Totoro/reservation.html
@@ -49,13 +49,30 @@
 	<script>
 		var myCalendar;
 		function doOnLoad() {
+      var today = new Date();
+      var nextday = new Date();
+      var dd = today.getDate();
+      var mm = today.getMonth()+1; //January is 0!
+      var yyyy = today.getFullYear();      
+      var nd = nextday.getDate()+2;
+      if(dd<10){
+        dd='0'+dd;
+      } 
+      if(mm<10){
+        mm='0'+mm;
+      }
+      if(nd<10){
+        nd='0'+nd;
+      } 
+      var today = yyyy+'-'+mm+'-'+dd;
+      var nextday = yyyy+'-'+mm+'-'+nd;
 			myCalendar = new dhtmlXCalendarObject(["date_from","date_to"]);
-			myCalendar.setDate("2013-03-10");
+			myCalendar.setDate("2018-04-10");
 			myCalendar.hideTime();
 			// init values
 			var t = new Date();
-			byId("date_from").value = "2013-03-05";
-			byId("date_to").value = "2013-03-15";
+			byId("date_from").value = today;
+			byId("date_to").value = nextday;
 		}
 		
 		function setSens(id, k) {
