--- a/Totoro/room-details.html
+++ b/Totoro/room-details.html
@@ -63,7 +63,7 @@
             data += '<div class="size-price">Price<span>'+obj[0].R_price+' THB</span></div></div>'; 
             document.getElementById("outsizepirce").innerHTML = data;
             link += '<div class="container-contact100-form-btn">';
-            link += '<a href="reservation.html?room=roomtype&RT_ID='+obj[0].R_key+'" class="contact100-form-btn">Book Now</a></div>';
+            link += '<a href="reservation.html" class="contact100-form-btn">Book Now</a></div>';
             document.getElementById("outlink").innerHTML = link;
         }
     };
