--- a/Totoro/reservation.html
+++ b/Totoro/reservation.html
@@ -100,25 +100,51 @@
     });
 </script>
 <script>
-  var obj;
-  var linkse = window.location.search;
-  var url = 'db.inc/db.select.php'+linkse;
-  var xmlhttp = new XMLHttpRequest();
-  xmlhttp.onreadystatechange = function() {
-      if (this.readyState == 4 && this.status == 200) {
-          obj = JSON.parse(this.responseText);
-          var data = '';
-          data += '<select class="input100" name="roomtype" id="roomtype">';
-          for(var i=0; i<obj.length; i++){
-            data += '<option value="'+obj[i].R_key+'">'+obj[i].R_typeR+'</option>';
-          }
-          data += '</select>';
-          document.getElementById("out").innerHTML = data;
-      }
-  };
-  xmlhttp.open("GET", url + linkse, true);
-  xmlhttp.send();
+    var obj;
+    var linkse = window.location.search;
+    var url = 'db.inc/db.select.php'+ linkse;
+    var xmlhttp = new XMLHttpRequest();
+    xmlhttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+            obj = JSON.parse(this.responseText);
+            var data = '';
+            data += '<select class="input100" name="roomtype" id="roomtype" onchange="changeroom(this);">';
+            for(var i=0; i<obj.length; i++){
+                data += '<option value="'+obj[i].R_key+'">'+obj[i].R_typeR+'</option>';
+            }
+            data += '</select>';
+            document.getElementById("out").innerHTML = data;
+        }
+    };
+    xmlhttp.open("GET", "db.inc/db.select.php?room=room&ng=ng", true);
+    xmlhttp.send();
+
+   /* function changeroom(opt){
+        var val = opt.options[opt.selectedIndex].value;
+        alert("value in js "+val);
+        var optVal = '&keyroom='+val;
+        var urlall = url + optVal
+        document.getElementById("demo").innerHTML = urlall;
+
+        var xmlhttpt = new XMLHttpRequest();
+        xmlhttpt.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status == 200) {
+                obj = JSON.parse(this.responseText);
+                var data = '';
+                data += '<select class="input100" name="roomtype" id="roomtype" onchange="changeroom(this);">';
+                for(var i=0; i<obj.length; i++){
+                    data += '<option value="'+obj[i].R_key+'">'+obj[i].R_typeR+'</option>';
+                }
+                data += '</select>';
+                document.getElementById("out").innerHTML = data;
+            }
+        };
+        xmlhttpt.open("GET", urlall, true);
+        xmlhttpt.send();
+    }*/
 </script>
+<div id="demo"></div>
+<div id="demo2"></div>
 <div id="header"></div>
 <div class="container-contact100"> 
     <div class="contact100-bg">
@@ -158,7 +184,7 @@
                 <h4>Room type</h4>
                 <div class="validate-input" data-validate="Please enter room type">
                 <div id="out">
-                    <select class="input100" name="roomtype" id="roomtype">
+                    <select class="input100" name="" id="">
                         <option value=""></option>   
                     </select>
                 </div>
@@ -167,29 +193,30 @@
 
                 <!-- room chrck -->
                 <div class="cc-selector">
+                <h4>Select Room ID:</h4>
                     <ul>
                         <li>
-                            <h5>RS101</h5>
+                            <h4><b>RS101</b></h4>
                             <input type="checkbox" id="cb1" />
                             <label for="cb1"><img src="http://lorempixel.com/100/100" /></label>
                         </li>
                         <li>
-                            <h5>RS102</h5>
+                            <h4><b>RS102</b></h4>
                             <input type="checkbox" id="cb2" />
                             <label for="cb2"><img src="http://lorempixel.com/101/101" /></label>
                         </li>
                         <li>
-                            <h5>RS103</h5>
+                            <h4><b>RS103</b></h4>
                             <input type="checkbox" id="cb3" />
                             <label for="cb3"><img src="http://lorempixel.com/102/102" /></label>
                         </li>
                         <li>
-                            <h5>RS104</h5>
+                            <h4><b>RS104</b></h4>
                             <input type="checkbox" id="cb4" />
                             <label for="cb4"><img src="http://lorempixel.com/103/103" /></label>
                         </li>
                         <li>
-                            <h5>RS105</h5>
+                            <h4><b>RS105</b></h4>
                             <input type="checkbox" id="cb5" />
                             <label for="cb5"><img src="http://lorempixel.com/104/104" /></label>
                         </li>
@@ -230,7 +257,6 @@
                 <span class="step"></span>
                 <span class="step"></span>
                 <span class="step"></span>
-                <!--span class="step"></span-->
             </div>
         </form>
     </div>
