--- a/Totoro/room-details.html
+++ b/Totoro/room-details.html
@@ -76,45 +76,44 @@
 
     <!-- RoomDetails -->
     <div id="outimg">
-        <div class="room_detail" data-ride="carousel">
+        <div class="rooms" data-ride="carousel">
             <img src="" class="img-responsive">
         </div>
     </div>
     <!-- RoomCarousel-->
    
-        <div class="room-features spacer">
-            <div class="row">
-                <div id="outtitel">
-                    <div class="col-sm-12 col-md-5"> 
-                        <p></p>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3 amenitites"> 
-                    <h3>Room Facilities</h3>    
-                    <ul>
-                    <li>One of the greatest barriers to making the sale is your prospect.</li>
-                    <li>Principle to work to make more money while having more fun.</li>
-                    <li>Unlucky people. Don't stubbornly.</li>
-                    <li>Principle to work to make more money while having more fun.</li>
-                    <li>Space in your house How to sell faster than your neighbors</li>
-                    </ul>
-                </div>  
-                <div id="outsizepirce">
-                    <div class="col-sm-3 col-md-2">
-                        <div class="size-price">Size<span></span></div>
-                    </div>
-                    <div class="col-sm-3 col-md-2">
-                        <div class="size-price">Price<span> THB</span></div>
-                    </div>
+    <div class="room-features spacer">
+        <div class="row">
+            <div id="outtitel">
+                <div class="col-sm-12 col-md-5"> 
+                    <p></p>
                 </div>
             </div>
-            <div id="outlink">        
-                <div class="container-contact100-form-btn">
-                    <a href="" class="contact100-form-btn">Book Now</a>
+            <div class="col-sm-6 col-md-3 amenitites"> 
+                <h3>Room Facilities</h3>    
+                <ul>
+                <li>One of the greatest barriers to making the sale is your prospect.</li>
+                <li>Principle to work to make more money while having more fun.</li>
+                <li>Unlucky people. Don't stubbornly.</li>
+                <li>Principle to work to make more money while having more fun.</li>
+                <li>Space in your house How to sell faster than your neighbors</li>
+                </ul>
+            </div>  
+            <div id="outsizepirce">
+                <div class="col-sm-3 col-md-2">
+                    <div class="size-price">Size<span></span></div>
                 </div>
-            </div> 
+                <div class="col-sm-3 col-md-2">
+                    <div class="size-price">Price<span> THB</span></div>
+                </div>
+            </div>
         </div>
-    </div>           
+        <div id="outlink">        
+            <div class="container-contact100-form-btn">
+                <a href="" class="contact100-form-btn">Book Now</a>
+            </div>
+        </div> 
+    </div>        
 </div>
 <div id="footer"></div>
 
