--- a/Totoro/footer.html
+++ b/Totoro/footer.html
@@ -11,7 +11,7 @@
                     <h4>Quick Links</h4>
                     <ul class="list-unstyled">
                         <li><a href="rooms.html">Rooms</a></li>        
-                        <li><a href="reservation.html?room=roomtype&RT_ID=">Reservation</a></li>
+                        <li><a href="reservation.html">Reservation</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
