--- a/Totoro/header.html
+++ b/Totoro/header.html
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav">        
         <li><a href="index.html">Home </a></li>
         <li><a href="rooms.html">Rooms</a></li>        
-        <li><a href="reservation.html?room=roomtype&RT_ID=">Reservation</a></li>
+        <li><a href="reservation.html">Reservation</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div><!-- Wnavbar-collapse -->
