--- a/Totoro/reservation.html
+++ b/Totoro/reservation.html
@@ -97,13 +97,13 @@
             
                 <h4>Check In</h4>
                 <div class="" data-validate="Please enter check in">
-                    <input class="input100" type="text" id="date_from" onclick="setSens('date_to', 'max');" readonly="true"  placeholder="Check In">
+                    <input class="input100" type="text" name="date_from" id="date_from" onclick="setSens('date_to', 'max');" readonly="true"  placeholder="Check In">
                     <span class="focus-input100"></span>
                 </div>
             
                 <h4>Check Out</h4>
                 <div class="" data-validate="Please enter check out">
-                    <input class="input100" type="text" id="date_to" onclick="setSens('date_from', 'min');" readonly="true" placeholder="Check Out">
+                    <input class="input100" type="text" name="date_to" id="date_to" onclick="setSens('date_from', 'min');" readonly="true" placeholder="Check Out">
                     <span class="focus-input100"></span>
                 </div>
             </div>
