--- a/Totoro/reservation.html
+++ b/Totoro/reservation.html
@@ -115,21 +115,21 @@
 
             <div class="tab">
                 <div id="bookdetail">
-                   <h3><u>Booking details</u></h3>
-                    <p><h4>Guest Details:</h4></p>
+                    <h3><u>Booking details</u></h3>
+                    <p><h3>Guest Details:</h3></p>
                     <div>
-                        <p>&nbsp;&nbsp;&nbsp;&nbsp;Full name:</p>
-                        <p>&nbsp;&nbsp;&nbsp;&nbsp;ID Card:</p>
-                        <p>&nbsp;&nbsp;&nbsp;&nbsp;E-mail:</p>
-                        <p>&nbsp;&nbsp;&nbsp;&nbsp;Phone:</p>
+                        <p><h4>&nbsp;&nbsp;&nbsp;&nbsp;Full name: </h4></p>
+                        <p><h4>&nbsp;&nbsp;&nbsp;&nbsp;ID Card: </h4></p>
+                        <p><h4>&nbsp;&nbsp;&nbsp;&nbsp;E-mail: </h4></p>
+                        <p><h4>&nbsp;&nbsp;&nbsp;&nbsp;Phone: <h4></p>
                     </div>
-                    <p><h4>Room Type:</h4></p>
+                    <p><h4>Room Type: </h4></p>
                     <div>
-                        <p>&nbsp;&nbsp;&nbsp;&nbsp;ID Room:</p>
-                        <p>&nbsp;&nbsp;&nbsp;&nbsp;Price Room:</p>
+                        <p><h4>&nbsp;&nbsp;&nbsp;&nbsp;ID Room: </h4></p>
+                        <p><h4>&nbsp;&nbsp;&nbsp;&nbsp;Price Room: </h4></p>
                     </div>
-                    <p><h4>Check In:</h4></p>
-                    <p><h4>Check Out:</h4></p> 
+                    <p><h4>Check In: </h4></p>
+                    <p><h4>Check Out: </h4></p>  
                 </div>
                 
             </div>
