--- a/Totoro/reservation.html
+++ b/Totoro/reservation.html
@@ -93,7 +93,7 @@
 
                 <div>
                     <div class="container-contact100-form-btn">
-                        <button class="contact100-form-btn" id="" type="submit" onclick="CheckDate();">Check Date</button>
+                        <button class="contact100-form-btn-green" id="" type="submit" onclick="CheckDate();">Check Date</button>
                     </div>
                 </div>
 
@@ -139,8 +139,7 @@
                     <button type="button" id="prevBtn" onclick="nextPrev(-1)" class="contact100-form-btn-gray">PREVIOUS</button>
                     &nbsp;&nbsp;&nbsp;&nbsp;
                     <button type="button" id="nextBtn" onclick="nextPrev(1)" class="contact100-form-btn-green">NEXT</button>
-                </div>
-                <div class="container-contact100-form-btn">
+                    &nbsp;&nbsp;&nbsp;&nbsp;
                     <button class="contact100-form-btn" id="fsubmit" type="submit" onclick="document.getElementById('regForm').submit();">CONFIRE&nbsp;&nbsp;BOOKING</button>
                 </div>
             </div>
