--- a/Totoro/reservation.html
+++ b/Totoro/reservation.html
@@ -50,7 +50,7 @@
         <img src="img/banner.jpg"  class="img-responsive" alt="">
     </div>
     <div class="wrap-contact100">
-        <form action="db.inc/db.inset.php" id="regForm" method="post" class="contact100-form validate-form">
+        <form action="db.inc/db.insert.php" id="regForm" method="post" class="contact100-form validate-form">
             <span class="contact100-form-title">Room Reservation</span>
             
             <div class="tab">
