--- a/Totoro/rooms.html
+++ b/Totoro/rooms.html
@@ -53,38 +53,38 @@
         if (this.readyState == 4 && this.status == 200) {
             obj = JSON.parse(this.responseText);
             var data = '';
-            for(var i=0; i<obj.items.length; i++){
+            for(var i=0; i<obj.length; i++){
                 data += "<div class='col-sm-6 wowload fadeInUp'>";
                 data += "<div class='rooms'>";
-                data += "<img src=\"img/room/"+obj.items[i].img+"\" class=\"img-responsive\">";
+                data += "<img src=\"img/room/"+obj[i].r_img+"\" class=\"imgroom\">";
                 data += "<div class=\"info\">";
-                data += "<h3>"+obj.items[i].typeR+"</h3>";
-                data += "<p>Room service is "+obj.items[i].count+"</p>";
-                data += "<p>"+obj.items[i].details+"</p>";
-                data += "<a href=\"room-details.html?room=roomtype&RT_ID="+obj.items[i].RT_ID+"\" class=\"btn btn-default\">Check Details</a>";
+                data += "<h3>"+obj[i].r_typeR+"</h3>";
+                //data += "<p>Room service is "+obj.items[i].count+"</p>";
+                data += "<p>"+obj[i].r_details+"</p>";
+                data += "<a href=\"room-details.html?room=roomtype&RT_ID="+obj[i].r_key+"\" class=\"btn btn-default\">Check Details</a>";
                 data += "</div></div></div>";
             }
             document.getElementById("out").innerHTML = data;
         }
     };
     /*setInterval(function() {*/
-        xmlhttp.open("GET", "db.inc/db.select.php?room=room", true);
+        xmlhttp.open("GET", "db.inc/db.select.php?room=roomtype&RT_ID=", true);
         xmlhttp.send();
     /*}, 1000);*/
 </script>
 <div id="header"></div>
-<div class="container">
+<div class="container" >
     <h2>Rooms</h2>
-    <div class="row">
+    <div class="row" >
         <div id="out">
             <div class="col-sm-6 wowload fadeInUp">
                 <div class="rooms">
                     <img src="img/room/Luxurious_Suites.jpg" class="img-responsive">
                     <div class="info">
                         <h3></h3>
-                        <p>Room service is </p> 
-                        <p>2 bedroom / 2 bathroom / 1 Living room</p>
-                        <a href="room-details.html?RT_ID=" class="btn btn-default">Check Details</a>
+                        <!--<p>Room service is </p> -->
+                        <p></p>
+                        <a href="#" class="btn btn-default">Check Details</a>
                     </div>
                 </div>
             </div>
