update Room Reservation

--- a/Totoro/reservation.html
+++ b/Totoro/reservation.html
@@ -91,11 +91,11 @@
                     <span class="focus-input100"></span>
                 </div>
 
-                <div>
-                    <div class="container-contact100-form-btn">
-                        <button class="contact100-form-btn-green" id="" type="submit" onclick="CheckDate();">Check Date</button>
+                <!--<div>
+                    <div hidden class="container-contact100-form-btn">
+                        <button hidden class="contact100-form-btn-green" id="" type="submit" onclick="CheckDate();">Check Date</button>
                     </div>
-                </div>
+                </div>-->
 
                 <h4>Room type</h4>
                 <div class="validate-input" data-validate="Please enter room type">
@@ -147,7 +147,7 @@
             <div style="text-align:center;margin-top:40px;">
                 <span class="step"></span>
                 <span class="step"></span>
-                <span class="step"></span>
+                <!--<span class="step"></span>-->
             </div>
         </form>
     </div>
