--- a/Totoro/details-reservation.html
+++ b/Totoro/details-reservation.html
@@ -45,21 +45,21 @@
         if (this.readyState == 4 && this.status == 200) {
             obj = JSON.parse(this.responseText);
             var data = '';
-            data += '<span class="contact100-form-title">Booking details</span>';
-            data += '<p><h3>Guest Details:</h3></p>';
+            data += '<center><h2>Booking details</h2></center>';
+            data += '<h3>Guest Details:</h3>';
             data += '<div>';
-            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;Full name: '+obj[0].d_name+'</h4></p>';
-            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;ID Card: </h4></p>';
-            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;E-mail: </h4></p>';
-            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;Phone: <h4></p>';
+            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;Full name: <font color="#000">'+obj[0].d_name+'</font></h4></p>';
+            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;ID Card: <font color="#000">'+obj[0].d_cusid+'</font></h4></p>';
+            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;E-mail: <font color="#000">'+obj[0].d_email+'</font></h4></p>';
+            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;Phone: <font color="#000">'+obj[0].d_phone+'</font><h4></p>';
             data += '</div>';
-            data += '<p><h4>Room Type: </h4></p>';
+            data += '<p><h4>Room Type: <font color="#000">'+obj[0].d_roomtype+'</font></h4></p>';
             data += '<div>';
-            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;ID Room: </h4></p>';
-            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;Price Room: </h4></p>';
+            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;ID Room: <font color="#000">'+obj[0].d_idroom+'</font></h4></p>';
+            data += '<p><h4>&nbsp;&nbsp;&nbsp;&nbsp;Price Room: <font color="#000">'+obj[0].d_price+'</font></h4></p>';
             data += '</div>';
-            data += '<p><h4>Check In: </h4></p>';
-            data += '<p><h4>Check Out: </h4></p>';
+            data += '<p><h4>Check In: <font color="#000">'+obj[0].d_checkin+'</font></h4></p>';
+            data += '<p><h4>Check Out: <font color="#000">'+obj[0].d_checkout+'</font></h4></p>';
             document.getElementById("outDel").innerHTML = data;
         }
     };
@@ -75,7 +75,6 @@
         <div id="outDel">
             <span class="contact100-form-title">Booking details</span>
             <p><h3>Guest Details:</h3></p>
-
             <div>
                 <p><h4>&nbsp;&nbsp;&nbsp;&nbsp;Full name: </h4></p>
                 <p><h4>&nbsp;&nbsp;&nbsp;&nbsp;ID Card: </h4></p>
